--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script src="app/sortear-numero.js" defer></script>
+    <script src="app/reconhecimentoVos.js" defer></script>
+    <script src="app/validacao.js" defer></script>
     <title>Número Secreto</title>
 </head>
 <body>
@@ -14,9 +16,11 @@
     <h3>O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span>.</h3>
 
     <div id="chute" class="mensagem">
+        <!--
         <div>Você disse:</div>
         <span class="box">20</span>
         <div>O número secreto é maior <i class="fa-solid fa-arrow-up-long"></i></div>
+        -->
     </div>
 
 </body>
